home-container overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 }
 @media (min-width: 992px) {
     body{
-        --big-fontSize: 3rem;
+        --big-fontSize: 2.8rem;
         --medium-fontSize: 2rem;
         --normal-fontsize: 1rem;
     }
@@ -104,7 +104,7 @@ ul{
     width: 100vw;
     height: 100vh;
     position: relative;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 .block-color{
     position: absolute;
@@ -172,6 +172,9 @@ ul{
     }
 }
 @media (min-width: 576px) and (max-width: 991px){
+    .home-container{
+        overflow: auto;
+    }
     .hero-details-section{
         display: flex;
         flex-direction: column;
